issue #14 - css refacto * BUG: day labels are not aligned properly as used to * common unit-size and label-font in styles.scss

--- a/src/app/color-legend/color-legend.component.scss
+++ b/src/app/color-legend/color-legend.component.scss
@@ -7,16 +7,14 @@
     flex-direction: row;
     justify-content: flex-end;
     .circle {
-        width: 10px;
-        height: 10px;
+        // width: 10px;
+        // height: 10px;
         border-radius: 50%;
         background-color: #ebedf0;
         margin: 1px;
     }
     //CSS REFACTO NEEDED: common use with contribution-graph
     .label {
-        color: #414660;
-        font-size: 10px;
         margin-left: 5px;
         margin-right: 5px;
     }
