--- a/src/app/contribution-graph/contribution-graph.component.scss
+++ b/src/app/contribution-graph/contribution-graph.component.scss
@@ -6,7 +6,7 @@
     #canvas {
         display: flex;
         flex-direction: row;
-        color: #414660;
+        // color: #414660;
         margin-bottom: 15px;
 
         .day-column {
@@ -15,23 +15,24 @@
             justify-content: space-between;  
             margin: -2px 15px 3px 4px;
             .day-label {
-                font-size: 10px;
-                height: 10px;
-                width: 10px;
+                // font-size: 10px;
+                // height: 10px;
+                // width: 10px;
                 text-align: center;
             }
         }
 
         .month-label {
-            font-size: 10px;
-            width: 10px;
-            height: 10px;
+            // font-size: 10px;
+            // width: 10px;
+            // height: 10px;
             overflow: visible;
             margin-bottom: 10px;
           }
         .circle {
-            width: 10px;
-            height: 10px;
+            // font-size: 10px;
+            // width: 10px;
+            // height: 10px;
             border-radius: 50%;
             background-color: #ebedf0;
             margin: 1px;
